<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PieGraphActivity">

    <com.echo.holographlibrary.PieGraph
        android:id="@+id/graph"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <TextView
        android:id="@+id/textViewValue1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pie_first_value"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextValue1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewValue2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pie_second_value"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextValue2"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="191dp" />

    <EditText
        android:id="@+id/editTextValue1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextValue2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@+id/editTextValue1" />

    <TextView
        android:id="@+id/textViewValue3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pie_third_value"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextValue3"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="54dp" />

    <EditText
        android:id="@+id/editTextValue3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextValue2"/>

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="graph"
        android:text="@string/show_graph"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>